@@ -1,19 +1,4 @@
- apply plugin: 'war'
-   
-  if(enable_gretty.equals("true"))
-  {
-  
-     apply plugin: 'org.akhikhl.gretty'
-  
-     gretty {
-	    httpPort = 80
-	   
-	    contextPath = '/bboss-websocket'
-	    jvmArgs = ['-Xmx1024M', '-XX:PermSize=128M', '-XX:MaxPermSize=256M']
-	  //  servletContainer = 'jetty7'
-	  
-	  }
-  } 
+ 
 sourceSets {
     main {
         java {
@@ -48,7 +33,6 @@ dependencies {
             [group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.7.4',transitive: false],
             [group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.7.4',transitive: false],
             [group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-xml', version: '2.7.4',transitive: false],
-             [group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.10',transitive: true],
              [group: 'cglib', name: 'cglib-nodep', version: '3.1', transitive: false],
              [group: 'org.ow2.asm', name: 'asm', version: '5.0.3', transitive: false],
            [group: 'com.bbossgroups', name: 'bboss-mvc', version: "${version}", transitive: false],
@@ -59,7 +43,7 @@ dependencies {
             [group: 'commons-logging', name: 'commons-logging', version: '1.1', transitive: false],
             
     )
-    providedCompile (
+    compileOnly (
     	[group: 'javax.servlet', name: 'javax.servlet-api', version: "3.1.0", transitive: false],
     	// [group: 'servletapi', name: 'servletapi', version: '2.4', transitive: false],
           //  [group: 'javax.servlet', name: 'jsp-api', version: '2.0', transitive: false],
@@ -70,6 +54,9 @@ dependencies {
 		[group: 'org.glassfish.tyrus', name: 'tyrus-server', version: '1.3.5', transitive: false ],
 		[group: 'org.glassfish.tyrus', name: 'tyrus-container-servlet', version: '1.3.5', transitive: false ],
 		[group: 'javax', name: 'javaee-web-api', version: '7.0', transitive: false ],
+		[group: 'org.eclipse.jetty.websocket', name: 'websocket-server', version: '9.3.7.v20160115', transitive: true ] ,
+		[group: 'org.eclipse.jetty.websocket', name: 'websocket-client', version: '9.3.7.v20160115', transitive: false ],
+		[group: 'org.eclipse.jetty', name: 'jetty-client', version: '9.3.7.v20160115', transitive: false ],
     )
    
     
@@ -77,35 +64,5 @@ dependencies {
 }
     
  
-
-war {
-    //from 'WebRoot'
-    // adds a file-set to the root of the archive
-    //webInf { from 'WebRoot/WEB-INF' } // adds a file-set to the WEB-INF dir.
-    //classpath configurations.compile-configurations.providedCompile // adds a configuration to the WEB-INF/lib dir.
-    //webXml = file('WebRoot/WEB-INF/web.xml') // copies a file to WEB-INF/web.xml
-}
-
-task sourcesJar(type: Jar) {
-	classifier = "sources"
-	from sourceSets.main.allJava
-}
-
-task javaDocJar(type: Jar, dependsOn: javadoc) {
-	classifier = "javadoc"
-	from javadoc.destinationDir
-}
-publishing {
-    publications {
-        mavenJava(MavenPublication) {
-        	from components.java
-			artifact sourcesJar
-			artifact javaDocJar
-            artifact war
-        }
-    }
-    repositories {
-        mavenLocal()
-    }
-}
-webAppDirName = 'WebRoot'  
+ 
+ 
